--- a/Melista - Backup.csproj
+++ b/Melista - Backup.csproj
@@ -12,16 +12,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="Resources\Gradient.png" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="DevExpressMvvm" Version="22.1.3" />
+    <PackageReference Include="Material.Icons.WPF" Version="1.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
