--- a/Melista.csproj
+++ b/Melista.csproj
@@ -29,6 +29,8 @@
 
   <ItemGroup>
     <PackageReference Include="DevExpressMvvm" Version="22.1.3" />
+    <PackageReference Include="MahApps.Metro" Version="1.6.5" />
+    <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
