--- a/Melista.csproj
+++ b/Melista.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Dark\search.png" />
     <None Remove="Resources\Fonts\Montserrat.ttf" />
     <None Remove="Resources\Gradient.png" />
     <None Remove="Resources\Images\Dark Theme.png" />
@@ -20,10 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\Light\search.png" />
     <Resource Include="Resources\Fonts\Montserrat.ttf" />
-    <Resource Include="Resources\Images\Dark Theme.png" />
+    <Resource Include="Resources\Dark\Dark Theme.png" />
     <Resource Include="Resources\Images\Gradient.png" />
-    <Resource Include="Resources\Images\Light Theme.png" />
+    <Resource Include="Resources\Light\Light Theme.png" />
+    <Resource Include="Resources\Dark\search.png" />
     <Folder Include="Models\" />
   </ItemGroup>
 
