--- a/Melista.csproj
+++ b/Melista.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <Folder Include="ViewModels\" />
     <Folder Include="Services\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
 
   <ItemGroup>
