--- a/Melista.csproj
+++ b/Melista.csproj
@@ -110,6 +110,7 @@
   <ItemGroup>
     <PackageReference Include="BlurryControls" Version="1.0.24" />
     <PackageReference Include="DevExpressMvvm" Version="22.1.3" />
+    <PackageReference Include="FFME.Windows" Version="4.4.350" />
     <PackageReference Include="gong-wpf-dragdrop" Version="3.2.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
