--- a/Melista - Backup (1).csproj
+++ b/Melista - Backup (1).csproj
@@ -102,9 +102,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Resource Include="Resources\Fonts\Montserrat.ttf" />
-    <Content Include="Resources\Dark\Dark Theme.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Resources\Dark\Dark Theme.png" />
     <Resource Include="Resources\Images\Gradient.png" />
     <Content Include="Resources\Light\Light Theme.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -112,6 +110,7 @@
     <Content Include="Resources\Dark\search.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -122,7 +121,6 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NReco.VideoConverter" Version="1.2.0" />
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
