--- a/Melista.csproj
+++ b/Melista.csproj
@@ -98,14 +98,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Resources\Light\search.png" />
-    <Resource Include="Resources\Fonts\Montserrat.ttf" />
-    <Resource Include="Resources\Dark\Dark Theme.png" />
-    <Resource Include="Resources\Images\Gradient.png" />
-    <Resource Include="Resources\Light\Light Theme.png">
+    <Content Include="Resources\Light\search.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Dark\search.png" />
+    </Content>
+    <Resource Include="Resources\Fonts\Montserrat.ttf" />
+    <Content Include="Resources\Dark\Dark Theme.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Resource Include="Resources\Images\Gradient.png" />
+    <Content Include="Resources\Light\Light Theme.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Dark\search.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Folder Include="Models\" />
   </ItemGroup>
 
