--- a/Melista.csproj
+++ b/Melista.csproj
@@ -98,20 +98,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Resources\Light\search.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Resource Include="Resources\Light\search.png" />
     <Resource Include="Resources\Fonts\Montserrat.ttf" />
-    <Content Include="Resources\Dark\Dark Theme.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Resource Include="Resources\Dark\Dark Theme.png" />
     <Resource Include="Resources\Images\Gradient.png" />
-    <Content Include="Resources\Light\Light Theme.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\Dark\search.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Resource Include="Resources\Light\Light Theme.png" />
+    <Resource Include="Resources\Dark\search.png" />
     <Folder Include="Models\" />
   </ItemGroup>
 
@@ -120,6 +112,7 @@
     <PackageReference Include="DevExpressMvvm" Version="22.1.3" />
     <PackageReference Include="FFME.Windows" Version="4.4.350" />
     <PackageReference Include="gong-wpf-dragdrop" Version="3.2.1" />
+    <PackageReference Include="LibVLCSharp.WPF" Version="3.6.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
