--- a/Melista.csproj
+++ b/Melista.csproj
@@ -120,6 +120,7 @@
     <PackageReference Include="DevExpressMvvm" Version="22.1.3" />
     <PackageReference Include="FFME.Windows" Version="4.4.350" />
     <PackageReference Include="gong-wpf-dragdrop" Version="3.2.1" />
+    <PackageReference Include="LibVLCSharp.WPF" Version="3.6.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
