--- a/Melista.csproj
+++ b/Melista.csproj
@@ -32,6 +32,7 @@
     <None Remove="Resources\Icons\volume.png" />
     <None Remove="Resources\Images\Dark Theme.png" />
     <None Remove="Resources\Images\Light Theme.png" />
+    <None Remove="Resources\Images\musicgif.gif" />
     <None Remove="Resources\Light\close.png" />
     <None Remove="Resources\Light\minimize.png" />
     <None Remove="Resources\Light\MiniScreen.png" />
@@ -136,6 +137,7 @@
     <PackageReference Include="Vlc.DotNet.Core" Version="3.1.0" />
     <PackageReference Include="Vlc.DotNet.Core.Interops" Version="3.1.0" />
     <PackageReference Include="Vlc.DotNet.Wpf" Version="3.1.0" />
+    <PackageReference Include="WpfAnimatedGif" Version="2.0.2" />
   </ItemGroup>
 
 </Project>
